--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ body {
 .auto-container{
   position:relative;
   max-width:1200px;
-  padding:0px 15px;
+  padding:7px 15px;
   margin:0 auto;
 }
 
@@ -289,6 +289,16 @@ img {
   transition-property: all;
 }
 
+video {
+  display: inline-block;
+  max-width: 100%;
+  height: auto;
+  transition-delay: .1s;
+  transition-timing-function: ease-in-out;
+  transition-duration: .7s;
+  transition-property: all;
+}
+
 /** button **/
 
 
@@ -329,7 +339,7 @@ img {
 }
 
 .sec-pad{
-  padding: 120px 0px;
+  padding: 100px 0px;
 }
 
 .mr-0{
@@ -496,7 +506,7 @@ img {
   align-items: center;
   position: absolute; /* Ensure absolute positioning */
   right: 0; /* Aligns it to the right of the container */
-  padding-top: 15px;
+  padding-top: 20px;
   transform: translateY(-50%);
 }
 
@@ -515,7 +525,7 @@ img {
 .header-lower .menu-right-content {
   position: absolute;
   right: 0px;
-  padding-top: 30px;
+  padding-top: 0px;
   transform: translateY(-50%);
 }
 
@@ -769,7 +779,7 @@ img {
   background: rgba(255, 255, 255, 0.35);
   width: 1px;
   height: 20px;
-  top: 3px;
+  top: 0px;
   right: -20px;
 }
 
@@ -788,7 +798,7 @@ img {
   font-size: 20px;
   color: #fff;
   cursor: pointer;
-  top: 3px;
+  top: 0px;
   transition: all 500ms ease;
 }
 
@@ -802,7 +812,7 @@ img {
 }
 
 .main-header .menu-right-content li.user-box:before{
-  top: 7px;
+  top: 0px;
 }
 
 .header-style-one .logo-container{
@@ -826,7 +836,7 @@ img {
 }
 
 .header-style-one .logo-box .logo img {
-  max-height: 50px;
+  max-height: 40px;
   width: auto;
   object-fit: contain; /* Ensure the logo scales appropriately */
 }
@@ -842,15 +852,9 @@ img {
   justify-content: center;
 }
 
-
-.header-style-one .logo img {
-  max-height: 50px; /* Ensure all logos have the same height */
-  object-fit: contain; /* Maintain aspect ratio */
-}
-
 .header-style-one .btn-box{
   position: absolute;
-  top: 24px;
+  top: 0px;
   right: 70px;
   z-index: 2;
 }
@@ -940,8 +944,8 @@ img {
   display:block;
   text-align:center;
   font-size:15px;
-  line-height:30px;
-  padding: 21px 0px;
+  line-height:25px;
+  padding: 15px 0px;
   font-weight:500;
   font-family: 'Saira', sans-serif;
   opacity:1;
@@ -1246,17 +1250,22 @@ img {
 }
 
 .sticky-header .main-menu .navigation > li > a{
-  padding-top: 25px;
-  padding-bottom: 25px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 .sticky-header .main-menu .navigation > li > a:before{
-  top: 25px;
+  top: 10px;
 }
 
 .sticky-header .logo-box{
-  padding: 12px 0px 20px 0px;
+  padding: 6px 0px 0px 0px;
 }
+
+.sticky-header {
+  height: 170px !important; /* Enforce reduced sticky header height */
+}
+
 
 .language{
   position: relative;
@@ -1791,6 +1800,7 @@ div#mCSB_1_container{
   line-height: 30px;
   font-weight: 500;
   color: #fff;
+  white-space: nowrap;
 }
 
 .banner-carousel .owl-dots{
@@ -1945,6 +1955,7 @@ div#mCSB_1_container{
 }
 
 .about-section .content-box .inner-box{
+  margin-top: 120px;
   position: relative;
   display: block;
   margin-bottom: 42px;
@@ -2399,9 +2410,10 @@ div#mCSB_1_container{
 
 /** testing-section **/
 
+
 .testing-section{
   position: relative;
-  padding-top: 140px;
+  padding-top: 20px;
 }
 
 .testing-section .bg-layer{
@@ -2428,7 +2440,7 @@ div#mCSB_1_container{
 
 .testing-tab .p-tab {
   position: absolute;
-  right: 0px;
+  left: 0px;
   top: 0px;
   width: 100%;
   height: auto;
@@ -2467,7 +2479,6 @@ div#mCSB_1_container{
   display: block;
   margin-bottom: 10px;
   padding: 19px 30px 17px 60px;
-  cursor: pointer;
   transition: all 500ms ease;
 }
 
@@ -2482,7 +2493,7 @@ div#mCSB_1_container{
   width: 5000px;
   height: 100%;
   top: 0px;
-  right: 0px;
+  right: 34px;
   opacity: 0.85;
   transition: all 500ms ease;
 }
@@ -2494,9 +2505,9 @@ div#mCSB_1_container{
   width: 34px;
   height: 100%;
   top: 0px;
-  right: 100px;
+  right: 0px;
   opacity: 0.85;
-  clip-path: polygon(100% 0%, 0% 50%, 100% 100%, 100% 100%, 100% 0%);
+  clip-path: polygon(0% 0%, 100% 50%, -1% 100%, 0% 100%, 0% 0%);
   transition: all 500ms ease;
 }
 
@@ -2530,7 +2541,7 @@ div#mCSB_1_container{
 
 .testing-section .testing-tab-btns li .link-btn{
   position: absolute;
-  right: 0px;
+  left: 0px;
   top: 14px;
   width: 40px;
   height: 40px;
@@ -2548,10 +2559,6 @@ div#mCSB_1_container{
   transform: scale(0,0);
 }
 
-.testing-section .testing-tab-btns li .link-btn i {
-  transform: rotate(180deg); /* Ensure the arrow points left */
-}
-
 .testing-section .testing-tab-btns li h3{
   font-size: 24px;
   line-height: 32px;
@@ -2562,9 +2569,8 @@ div#mCSB_1_container{
 .testing-section .p-tabs-content{
   position: relative;
   display: block;
-  margin-left: 10px;
-  margin-bottom: -155px;
-  margin-right: 130px;
+  margin-left: 230px;
+  margin-bottom: -100px;
 }
 
 .testing-section .p-tabs-content .content-box{
@@ -2613,7 +2619,6 @@ div#mCSB_1_container{
   margin-bottom: 33px;
   line-height: 26px;
 }
-
 
 
 /** excellence-section **/
@@ -3005,6 +3010,21 @@ div#mCSB_1_container{
   transform:scale(1) translateY(0px);
 }
 
+/* Add separation between rows */
+.items-container.row > .col-lg-3,
+.items-container.row > .col-md-6,
+.items-container.row > .col-sm-12 {
+    margin-bottom: 20px; /* Adjust the value as needed */
+}
+
+
+.project-block-one {
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+  flex-grow: 1;
+}
+
 .project-block-one .inner-box{
   position: relative;
   display: block;
@@ -3019,6 +3039,11 @@ div#mCSB_1_container{
   transition: all 500ms ease;
 }
 
+/* Ensure .static-content stretches within .project-block-one */
+.project-block-one .static-content {
+  flex-grow: 1;
+}
+
 .project-block-one .inner-box:hover .static-content{
   opacity: 0;
 }
@@ -3030,6 +3055,10 @@ div#mCSB_1_container{
 }
 
 .project-block-one .inner-box .image-box img{
+  width: 100%;
+}
+
+.project-block-one .inner-box .image-box video{
   width: 100%;
 }
 
@@ -3078,8 +3107,8 @@ div#mCSB_1_container{
 
 .project-block-one .inner-box .lower-content h3{
   display: block;
-  font-size: 21px;
-  line-height: 32px;
+  font-size: 16px;
+  line-height: 22px;
   font-weight: 500;
 }
 
@@ -3539,7 +3568,7 @@ div#mCSB_1_container{
 
 .main-footer .widget-section{
   position: relative;
-  padding: 114px 0px 88px 0px;
+  padding: 30px 0px 10px 0px;
   border-bottom: 1px dashed #3e7288;
 }
 
@@ -4228,7 +4257,8 @@ div#mCSB_1_container{
 }
 
 .service-details-content .content-two .image-box{
-  margin-bottom: 23px;
+  margin-top:30px ;
+  margin-bottom: 50px;
 }
 
 .service-details-content .content-two .list-item li{
@@ -4560,4 +4590,78 @@ div#mCSB_1_container{
 .research-page-section .more-btn{
   margin-top: 30px;
 }
+
+/** error-section **/
+
+.error-section{
+  position: relative;
+  padding: 120px 0px;
+}
+
+.error-section h1{
+  position: relative;
+  display: inline-block;
+  font-size: 54px;
+  font-weight: 600;
+  color: #fff;
+  width: 264px;
+  height: 230px;
+  line-height: 232px;
+  text-align: center;
+  z-index: 1;
+  margin-bottom: 43px;
+}
+
+.error-section h3{
+  display: block;
+  font-size: 40px;
+  line-height: 48px;
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+
+.error-section h2{
+  position: relative;
+  display: block;
+  font-size: 48px;
+  font-weight: 54px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+
+.error-section p{
+  margin-bottom: 32px;
+}
+
+.error-section .theme-btn{
+  padding: 15px 40px;
+}
+
+.error-section .pattern-layer .pattern-1{
+  position: absolute;
+  left: 60px;
+  bottom: 115px;
+  width: 512px;
+  height: 512px;
+  background-repeat: no-repeat;
+}
+
+.error-section .pattern-layer .pattern-2{
+  position: absolute;
+  top: 75px;
+  right: 370px;
+  width: 250px;
+  height: 224px;
+  background-repeat: no-repeat;
+}
+
+.error-section .pattern-layer .pattern-3{
+  position: absolute;
+  bottom: 75px;
+  right: 165px;
+  width: 280px;
+  height: 282px;
+  background-repeat: no-repeat;
+}
+
 
